[tool.poetry]
name = "gmm_net"
version = "0.1.0"
description = "The demo of visualization by generative manifold model network"
authors = ["Ryuji Watanabe <watanabe.ryuji717@mail.kyutech.jp>"]

[tool.poetry.dependencies]
python = "^3.6.10"
numpy = "1.16.4"
scikit-learn = "0.22.1"
tqdm = "4.15.0"
matplotlib = "3.1.0"
joblib = "0.14.1"
scipy = "1.3.2"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
