[tool.poetry]
name = "gmm_net"
version = "0.1.0"
description = "The demo of visualization by generative manifold model network"
authors = ["Ryuji Watanabe <watanabe.ryuji717@mail.kyutech.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
scikit-learn = "^0.23.2"
tqdm = "^4.48.2"
matplotlib = "^3.3.1"
joblib = "^0.16.0"
scipy = "^1.5.2"
pandas = "^1.1.2"
dash = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
